--- a/src/Dfc.ProviderPortal.Lars.LearningDelivery/Dfc.ProviderPortal.Lars.LearningDelivery.csproj
+++ b/src/Dfc.ProviderPortal.Lars.LearningDelivery/Dfc.ProviderPortal.Lars.LearningDelivery.csproj
@@ -4,6 +4,7 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.8.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.22" />
   </ItemGroup>
   <ItemGroup>
